--- a/test/database.yml
+++ b/test/database.yml
@@ -11,16 +11,17 @@ mysql:
   encoding: utf8
   reconnect: false
   database: aaa_test
-  username: archival_tester
-  password: perspicacious
+  username: root
+  password: 
   socket: /tmp/mysql.sock
 
 pg:
+  host: localhost
   adapter: postgresql
   pool: 5
   timeout: 5000
   encoding: utf8
   database: aaa_test
-  username: archival_tester
-  password: perspicacious
+  username: deandeblock
+  password: 
   min_messages: WARNING
